--- a/app/sass/pages/_main.sass
+++ b/app/sass/pages/_main.sass
@@ -11,13 +11,17 @@ html
   min-height: 100%
   height: 100%
 .body
+  position: relative
   display: flex
   flex-direction: column
   min-height: 100%
   padding-top: 74px
   transition: .3s transform ease-out
   &--collapsed
+    height: 100%
     overflow: hidden
+    width: 100%
+    position: fixed
     transform: translateX(-$collapse-width)
 .wrapper
   flex: 1
